objects/HR_Department_To_SFDC_Profile__mdt.object
<CustomObject>
    <description>Mapping between HR Department and SFDC Profiles. Also HR Department field used by Informatica as lookup to create/update SFDC Employees</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Admin_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data Admin flag is on on Manager&apos;s role</description>
        <label>Data Admin Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager&apos;s profile Installation</description>
        <label>Installation Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MW_User_Profile__c</fullName>
        <description>List of the current SFDC Profiles</description>
        <label>MW User Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MathWorks Data Management</fullName>
                    <default>true</default>
                    <label>MathWorks Data Management</label>
                </value>
                <value>
                    <fullName>MW AE/PE Manager</fullName>
                </value>
                <value>
                    <fullName>MW AE/PE User</fullName>
                </value>
                <value>
                    <fullName>MW Article PDF User</fullName>
                </value>
                <value>
                    <fullName>MW Customer Service Standard User</fullName>
                </value>
                <value>
                    <fullName>MW Data Administrator</fullName>
                </value>
                <value>
                    <fullName>MW DataLoader</fullName>
                </value>
                <value>
                    <fullName>MW Edu Mkt and Connections</fullName>
                </value>
                <value>
                    <fullName>MW Eloqua Integration</fullName>
                </value>
                <value>
                    <fullName>MW Install User (pilot)</fullName>
                </value>
                <value>
                    <fullName>MW KCS Coach User - not used</fullName>
                </value>
                <value>
                    <fullName>MW Marketing User</fullName>
                </value>
                <value>
                    <fullName>MW RAC Standard User</fullName>
                </value>
                <value>
                    <fullName>MW Sales Standard User</fullName>
                </value>
                <value>
                    <fullName>MW Social Mission</fullName>
                </value>
                <value>
                    <fullName>MW Sourcecontrol</fullName>
                </value>
                <value>
                    <fullName>MW Standard Delegated Admin</fullName>
                </value>
                <value>
                    <fullName>MW Standard Read Only</fullName>
                </value>
                <value>
                    <fullName>MW Support Read Only User</fullName>
                </value>
                <value>
                    <fullName>MW Technical Evangelist Manager</fullName>
                </value>
                <value>
                    <fullName>MW Technical Evangelist User</fullName>
                </value>
                <value>
                    <fullName>MW Technical Support Standar User (pilot)</fullName>
                </value>
                <value>
                    <fullName>MW Technical Support Standard Use</fullName>
                </value>
                <value>
                    <fullName>MW TS Audit</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_HR_Department__c</fullName>
        <description>MW SFDC Department - only users from those departments created in SF</description>
        <inlineHelpText>SFDC Standard Department</inlineHelpText>
        <label>SFDC HR Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_HR_Division__c</fullName>
        <description>HR Division</description>
        <label>SFDC HR Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HR Manager Flag</description>
        <label>is Manager</label>
        <type>Checkbox</type>
    </fields>
    <label>HR Department To SFDC Profile</label>
    <pluralLabel>HR Department To SFDC Profiles</pluralLabel>
</CustomObject>